5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1834_2602.log
== SUBMITION (2019-06-25 16:45:45) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matrix x,y,z: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc*=T

bac=dot(alimentos,qc)

print("estafilococo: ", round(qc[0], 1))
print("salmonela: ", round(qc[1], 1))
print("coli: ", round(qc[2], 1))


if qc[0] == max(qc):
    print("estafilococo")
elif qc[1] == max(qc):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
0.977749
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 7, in <module>
    qc*=T
NameError: name 'T' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:45:47) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matrix x,y,z: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc*=T

bac=dot(alimentos,qc)

print("estafilococo: ", round(qc[0], 1))
print("salmonela: ", round(qc[1], 1))
print("coli: ", round(qc[2], 1))


if qc[0] == max(qc):
    print("estafilococo")
elif qc[1] == max(qc):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:46:13) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matrix x,y,z: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

bac=dot(alimentos,qc)

print("estafilococo: ", round(qc[0], 1))
print("salmonela: ", round(qc[1], 1))
print("coli: ", round(qc[2], 1))


if qc[0] == max(qc):
    print("estafilococo")
elif qc[1] == max(qc):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:47:12) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matrix x,y,z: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

bac=dot(alimentos,qc)

print("estafilococo: ", round(bac[0], 1))
print("salmonela: ", round(bac[1], 1))
print("coli: ", round(bac[2], 1))


if bac[0] == max(bac):
    print("estafilococo")
elif bac[1] == max(bac):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:48:31) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

bac = dot(inv(alimentos),qc)

print("estafilococo: ", round(bac[0], 1))
print("salmonela: ", round(bac[1], 1))
print("coli: ", round(bac[2], 1))


if bac[0] == max(bac):
    print("estafilococo")
elif bac[1] == max(bac):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:48:46) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(inv(alimentos),qc)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(bac):
    print("estafilococo")
elif ba[1] == max(bac):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:49:10) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(inv(alimentos),qc)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(bac):
    print("estafilococo")
elif ba[1] == max(bac):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
1.08621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 9, in <module>
    ba = dot(inv(alimentos),qc)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 545, in inv
    _assertRankAtLeast2(a)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 207, in _assertRankAtLeast2
    'at least two-dimensional' % a.ndim)
numpy.linalg.LinAlgError: 1-dimensional array given. Array must be at least two-dimensional

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:49:11) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(inv(alimentos),qc)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(bac):
    print("estafilococo")
elif ba[1] == max(bac):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:49:29) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(alimentos,qc)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(bac):
    print("estafilococo")
elif ba[1] == max(bac):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:49:37) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(alimentos,qc)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(ba):
    print("estafilococo")
elif ba[1] == max(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:49:51) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(qc,alimentos)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(ba):
    print("estafilococo")
elif ba[1] == max(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:50:21) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(inv(qc),alimentos)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(ba):
    print("estafilococo")
elif ba[1] == max(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:50:55) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(qc,alimentos)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(ba):
    print("estafilococo")
elif ba[1] == max(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:51:09) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(alimentos,qc)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(ba):
    print("estafilococo")
elif ba[1] == max(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:51:27) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(qc,alimentos)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == max(ba):
    print("estafilococo")
elif ba[1] == max(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:51:51) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(qc,alimentos)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == min(ba):
    print("estafilococo")
elif ba[1] == min(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:52:04) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(alimentos,qc)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == min(ba):
    print("estafilococo")
elif ba[1] == min(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:57:57) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(inv(qc),alimentos)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == min(ba):
    print("estafilococo")
elif ba[1] == min(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:58:17) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])
qc=qc.T

ba = dot(inv(qc),alimentos)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == min(ba):
    print("estafilococo")
elif ba[1] == min(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 16:59:34) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])


ba = dot(inv(qc),alimentos.T)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == min(ba):
    print("estafilococo")
elif ba[1] == min(ba):
    print("salmonela")
else:
    print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:59:43) 
-- CODE:
from numpy.linalg import*
from numpy import *

alimentos=array(eval(input("matriz: ")))

qc=array([[2,1,4],[1,2,0],[2,3,2]])


ba = dot(inv(qc),alimentos.T)

print("estafilococo: ", round(ba[0], 1))
print("salmonela: ", round(ba[1], 1))
print("coli: ", round(ba[2], 1))


if ba[0] == min(ba):
    print("estafilococo")
elif ba[1] == min(ba):
    print("salmonela")
else:
    print("coli")

-- EXECUTION TIME:
1.13131
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:16:09) 
-- CODE:
from numpy.linalg import*
from numpy import *

vetor1=array(eval(input("")))

vetor2=array([[2,1,4],[1,2,0],[2,3,2]])

w=dot(inv(vetor2),vetor1)

print("estafilococo:" ,round(w,1))
print("salmonela:" ,round(w,1))
print("coli:" ,round(w,1))

if w[0]==min(w):
	print"estafilococo"
elif w[1]==min(w):
	print("salmonela")
elif w[2]==min(w):
	print('coli')
-- ERROR:
File "XXXX", line 15
    print"estafilococo"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:16:18) 
-- CODE:
from numpy.linalg import*
from numpy import *

vetor1=array(eval(input("")))

vetor2=array([[2,1,4],[1,2,0],[2,3,2]])

w=dot(inv(vetor2),vetor1)

print("estafilococo:" ,round(w,1))
print("salmonela:" ,round(w,1))
print("coli:" ,round(w,1))

if w[0]==min(w):
	print("estafilococo")
elif w[1]==min(w):
	print("salmonela")
elif w[2]==min(w):
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:16:27) 
-- CODE:
from numpy.linalg import*
from numpy import *

vetor1=array(eval(input("")))

vetor2=array([[2,1,4],[1,2,0],[2,3,2]])

w=dot(inv(vetor2),vetor1)

print("estafilococo:" ,round(w,1))
print("salmonela:" ,round(w,1))
print("coli:" ,round(w,1))

if w[0]==min(w):
	print("estafilococo")
elif w[1]==min(w):
	print("salmonela")
elif w[2]==min(w):
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:16:58) 
-- CODE:
from numpy.linalg import*
from numpy import *

vetor1=array(eval(input("")))

vetor2=array([[2,1,4],[1,2,0],[2,3,2]])

w=dot(inv(vetor2),vetor1)

print("estafilococo:" ,round(w[0],1))
print("salmonela:" ,round(w[1],1))
print("coli:" ,round(w[2],1))

if w[0]==min(w):
	print("estafilococo")
elif w[1]==min(w):
	print("salmonela")
elif w[2]==min(w):
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:17:36) 
-- CODE:
from numpy.linalg import*
from numpy import *

vetor1=array(eval(input("")))

vetor2=array([[2,1,4],[1,2,0],[2,3,2]])
print(inv(vetor2))
w=dot(inv(vetor2),vetor1)

print("estafilococo:" ,round(w[0],1))
print("salmonela:" ,round(w[1],1))
print("coli:" ,round(w[2],1))

if w[0]==min(w):
	print("estafilococo")
elif w[1]==min(w):
	print("salmonela")
elif w[2]==min(w):
	print('coli')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 12:18:14) 
-- CODE:
from numpy.linalg import*
from numpy import *

vetor1=array(eval(input("")))

vetor2=array([[2,1,4],[1,2,0],[2,3,2]])

w=dot(inv(vetor2),vetor1)

print("estafilococo:" ,round(w[0],1))
print("salmonela:" ,round(w[1],1))
print("coli:" ,round(w[2],1))

if w[0]==min(w):
	print("estafilococo")
elif w[1]==min(w):
	print("salmonela")
elif w[2]==min(w):
	print('coli')
-- EXECUTION TIME:
0.862125
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:07:10) 
-- CODE:
from numpy.linalg import*
from numpy import *

vetor1=array(eval(input("")))

vetor2=array([[2,1,4],[1,2,0],[2,3,2]])

w=dot(inv(vetor2),vetor1.T)

print("estafilococo:" ,round(w[0],1))
print("salmonela:" ,round(w[1],1))
print("coli:" ,round(w[2],1))

if w[0]==min(w):
	print("estafilococo")
elif w[1]==min(w):
	print("salmonela")
elif w[2]==min(w):
	print('coli')
-- EXECUTION TIME:
1.16009
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
